crates/id_effect/tests/ui/tilde_key_outside_effect.rs
struct Database;

fn main() {
  let _ = id_effect::require!(Database);
}
